[package]
name = "rockwork"
version = "0.1.2"
authors = ["Brandon Surmanski <b.surmanski@gmail.com>"]
edition = "2018"

[dependencies]
# Rendering
gl = "0.11.0"

# Windowing
sdl2 = "0.32.1"

# Loading Images
image = {version = "0.21.0", default_features = false}

nalgebra = "0.16"

# For compiling to Emscripten webasm.
[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten = { git = "https://github.com/bsurmanski/emscripten-rs" }
#emscripten = { path = "../emscripten-rs" }
