[package]
name = "draw"
version = "0.1.0"
authors = ["Brandon Surmanski <b.surmanski@gmail.com>"]
edition = "2018"

[dependencies]
rockwork = { path = "../../" }
sdl2 = "0.32.1"
gl = "0.11.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten = { git = "https://github.com/bsurmanski/emscripten-rs" }
